--- a/case-study/furama - Copy/src/main/resources/templates/customer/list.html
+++ b/case-study/furama - Copy/src/main/resources/templates/customer/list.html
@@ -151,8 +151,7 @@
                 <div class="modal-body">
                     Do you want to delete this customer?
                     <div class="input-group">
-                        <span class="input-group-text">Id</span>
-                        <input type="text" class="form-control" id="idDelete" name="idDelete">
+                        <input type="hidden" class="form-control" id="idDelete" name="idDelete">
                     </div>
                     <div class="input-group">
                         <span class="input-group-text">Name</span>
@@ -193,7 +192,7 @@
         document.getElementById("nameDelete").value = name;
     }
 
-    //Tự hiện modal mess sau khi thêm sửa xóa
+    // Tự hiện modal mess sau khi thêm sửa xóa
     $(window).on('load', function () {
             let mess = $('#messInput').val();
             if (mess) {
@@ -201,6 +200,7 @@
             }
         }
     )
+
 </script>
 
 </body>
