--- a/case-study/furama - Copy/src/main/resources/templates/facility/list.html
+++ b/case-study/furama - Copy/src/main/resources/templates/facility/list.html
@@ -9,13 +9,15 @@
 <!--navbar-->
 <div th:replace="~{common/common::navbar}"></div>
 <h1>List Facility</h1>
-
 <h1 class="bg-success text-center text-white p-3" style="margin-top: 150px">Danh sách dịch vụ</h1>
-
+<input type="hidden" id="messInput" th:value="${mess}">
 <div class="container">
     <a class="btn btn-success mt-3 mb-3" href="/facility/add">Thêm mới dịch vụ</a>
+
+    <!--    form tìm kiếm-->
     <form class="d-flex mb-3 mt3" action="/facility/search" method="get">
-        <input class="form-control me-2" name="searchName" placeholder="Search Facility" aria-label="Search">
+        <input class="form-control me-2" name="searchName" placeholder="Search Facility" th:value="${searchName}"
+               aria-label="Search">
         <Select name="facilityTypeName" class="form-control border-success">
             <option value="">Select Facility Type</option>
             <option th:each="facilityType:${facilityTypeList}" th:value="${facilityType.facilityTypeName}"
@@ -60,13 +62,29 @@
                 <td th:text="${facility.poolArea}"></td>
                 <td th:text="${facility.numberOfFloor}"></td>
                 <td th:text="${facility.facilityFree}"></td>
-                <td>chi tieets</td>
+                <td>
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
+                            data-bs-target="#viewModal" th:onclick="|getInfoFacility(${facility.facilityId})|">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-info-square" viewBox="0 0 16 16">
+                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0
+                             0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                            <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.
+                            105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.
+                            375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                        </svg>
+                    </button>
+                </td>
                 <td><a class="btn btn-outline-warning" th:href="@{/facility/update(idUpdate=${facility.facilityId})}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                          class="bi bi-pencil-square" viewBox="0 0 16 16">
-                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293
+                        1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.
+                        805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd"
-                              d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                              d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1
+                              -.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.
+                              5v11z"/>
                     </svg>
                 </a></td>
                 <td>
@@ -75,7 +93,10 @@
                             th:attr="onclick=|getInfoToDelete('${facility.facilityId}','${facility.facilityName}')|">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-trash-fill" viewBox="0 0 16 16">
-                            <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                            <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0
+                            0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0
+                             0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3
+                             .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
                         </svg>
                     </button>
                 </td>
@@ -86,7 +107,9 @@
 
     <nav aria-label="Page navigation example">
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" th:href="@{/facility(page=0,searchName = ${searchName}, facilityTypeName=${facilityTypeName})}">First</a></li>
+            <li class="page-item"><a class="page-link"
+                                     th:href="@{/facility(page=0,searchName = ${searchName}, facilityTypeName=${facilityTypeName})}">First</a>
+            </li>
             <li class="page-item"><a class="page-link"
                                      th:href="@{/facility(page=${facilityList.number - 1},searchName = ${searchName}, facilityTypeName=${facilityTypeName})}"
                                      th:if="${facilityList.hasPrevious()}">Previous</a></li>
@@ -118,48 +141,9 @@
             </div>
 
             <div class="modal-body">
-                <table class="table table-bordered table-success table-hover">
+                <table class="table table-bordered table-success table-hover" id="facidilyDetail">
 
-                    <tr>
-                        <th>#</th>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <th>Tên dịch vụ</th>
-                        <td>Villa Beach Front</td>
-                    </tr>
-                    <tr>
-                        <th>Diện tích</th>
-                        <td>25000</td>
-                    </tr>
-                    <tr>
-                        <th>Chi phí thuê</th>
-                        <td>1000000</td>
-                    </tr>
-                    <tr>
-                        <th>Số người tối đa</th>
-                        <td>10</td>
-                    </tr>
-                    <tr>
-                        <th>Tiêu chuẩn phòng</th>
-                        <td>vip</td>
-                    </tr>
-                    <tr>
-                        <th>Mô tả tiện nghi khác</th>
-                        <td>Có hồ bơi</td>
-                    </tr>
-                    <tr>
-                        <th>Diện tích hồ bơi</th>
-                        <td>500</td>
-                    </tr>
-                    <tr>
-                        <th>Số tầng</th>
-                        <td>4</td>
-                    </tr>
-                    <tr>
-                        <th>Dịch vụ miễn phí đi kèm</th>
-                        <td>Không</td>
-                    </tr>
+
                 </table>
 
             </div>
@@ -184,8 +168,7 @@
                 <div class="modal-body">
                     Do you want to delete this facility?
                     <div class="mb-3 mt-3">
-                        <label for="idDelete" class="form-label">ID:</label>
-                        <input type="text" class="form-control" id="idDelete" name="idDelete" readonly>
+                        <input type="hidden" class="form-control" id="idDelete" name="idDelete" readonly>
                     </div>
                     <div class="mb-3 mt-3">
                         <label for="nameDelete" class="form-label">Name:</label>
@@ -201,14 +184,102 @@
         </div>
     </div>
 </div>
+<!-- The mess Modal -->
+<div class="modal" id="messModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-success">
+                <h4 class="modal-title text-white">Message</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <p id="messtext" class="fw-bold" th:text="${mess}"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Footer-->
+<footer th:replace="~{common/common::footer}"></footer>
+<script th:replace="~{common/common::js}"></script>
+<script src="/js/jquery-3.6.1.min.js"></script>
 <script>
     function getInfoToDelete(id, name) {
         document.getElementById("idDelete").value = id;
         document.getElementById("nameDelete").value = name;
     }
+
+    // Tự hiện modal mess sau khi thêm sửa xóa
+    $(window).on('load', function () {
+            let mess = $('#messInput').val();
+            if (mess) {
+                $('#messModal').modal('show');
+            }
+        }
+    )
+
+    // function getInfoFacility(id) {
+    //     $.ajax({
+    //         headers: {
+    //             'Accept': 'application/json',
+    //             'Content-Type': 'application/json'
+    //         },
+    //         type: "GET",
+    //         url: "http://localhost:8080/facilityRest?id=" + id,
+    //         success: function (facility) {
+    //             console.log(facility);
+    //             let htmlStr = "";
+    //                 htmlStr += `
+    //                 <tr>
+    //                     <th>#</th>
+    //                     <td>${facility.facilityId}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Tên dịch vụ</th>
+    //                     <td>${facility.facilityName}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Diện tích</th>
+    //                     <td>${facility.area}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Chi phí thuê</th>
+    //                     <td>${facility.cost}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Số người tối đa</th>
+    //                     <td>${facility.maxPeople}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Tiêu chuẩn phòng</th>
+    //                     <td>${facility.standardRoom}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Mô tả tiện nghi khác</th>
+    //                     <td>${facility.descriptionOtherConvenience}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Diện tích hồ bơi</th>
+    //                     <td>${facility.poolArea}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Số tầng</th>
+    //                     <td>${facility.numberOfFloor}</td>
+    //                 </tr>
+    //                 <tr>
+    //                     <th>Dịch vụ miễn phí đi kèm</th>
+    //                     <td>${facility.facilityFree}</td>
+    //                 </tr>
+    //                 `
+    //             $('#facidilyDetail').html(htmlStr);
+    //         },
+    //         error: function (resultError) {
+    //             alert('lỗi hiện chi tiết facility');
+    //         }
+    //     });
+    // }
 </script>
-<!--Footer-->
-<footer th:replace="~{common/common::footer}"></footer>
-<script th:replace="~{common/common::js}"></script>
 </body>
 </html>
